Default to keeping only latest summary

--- a/options.html
+++ b/options.html
@@ -30,6 +30,7 @@
 
       <label class="lbl">History max items</label>
       <input id="maxItems" type="number" min="1" max="200" class="input" />
+      <div class="hint">设为 1 = 每次点赞只保留最新一条（自动清理上一条）。</div>
 
       <div class="row">
         <button id="save" class="btn">Save</button>
