--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,7 @@
       <div id="list" class="list"></div>
 
       <div class="row">
+        <button id="downloadAll" class="btn">Download all (.txt)</button>
         <button id="clear" class="btn danger">Clear history</button>
       </div>
 
